// Package builder_test æä¾› SponsorTools çš„å•å…ƒæµ‹è¯•
//
// ğŸ§ª **æµ‹è¯•è¦†ç›–**ï¼š
// - SponsorTools æ ¸å¿ƒåŠŸèƒ½æµ‹è¯•
// - èµåŠ©UTXOæŸ¥è¯¢æµ‹è¯•
// - é…ç½®éªŒè¯æµ‹è¯•
// - é”å®šæ¡ä»¶ç”Ÿæˆæµ‹è¯•
package builder

import (
	"context"
	"fmt"
	"math/big"
	"testing"

	"github.com/stretchr/testify/assert"

	"github.com/weisyn/v1/internal/core/tx/testutil"
	transaction_pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxopb "github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/types"
)

// ==================== NewSponsorTools æµ‹è¯• ====================

// TestNewSponsorTools æµ‹è¯•åˆ›å»º SponsorTools
func TestNewSponsorTools(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	txQuery := &MockTxQuery{}
	chainQuery := &MockChainQuery{}
	hashManager := testutil.NewTestHashManager()

	tools := NewSponsorTools(utxoQuery, txQuery, chainQuery, hashManager)

	assert.NotNil(t, tools)
	assert.NotNil(t, tools.eutxoQuery)
	assert.NotNil(t, tools.helper)
	assert.NotNil(t, tools.audit)
}

// ==================== ListSponsorUTXOs æµ‹è¯• ====================

// TestListSponsorUTXOs_Success æµ‹è¯•åˆ—å‡ºèµåŠ©UTXOæˆåŠŸ
func TestListSponsorUTXOs_Success(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	txQuery := &MockTxQuery{}
	chainQuery := &MockChainQuery{}
	hashManager := testutil.NewTestHashManager()

	tools := NewSponsorTools(utxoQuery, txQuery, chainQuery, hashManager)

	// æ·»åŠ èµåŠ©UTXO
	sponsorUTXO := createSponsorUTXOForTest("1000000", []string{"consume"}, nil, 100)
	utxoQuery.AddSponsorPoolUTXO(sponsorUTXO)

	ctx := context.Background()
	currentHeight := uint64(200)
	onlyAvailable := true

	result, err := tools.ListSponsorUTXOs(ctx, currentHeight, onlyAvailable)

	assert.NoError(t, err)
	assert.NotNil(t, result)
	assert.Len(t, result, 1)
	assert.Equal(t, sponsorUTXO, result[0].UTXO)
	assert.Equal(t, SponsorStateActive, result[0].LifecycleState)
}

// TestListSponsorUTXOs_Empty æµ‹è¯•æ²¡æœ‰èµåŠ©UTXO
func TestListSponsorUTXOs_Empty(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	txQuery := &MockTxQuery{}
	chainQuery := &MockChainQuery{}
	hashManager := testutil.NewTestHashManager()

	tools := NewSponsorTools(utxoQuery, txQuery, chainQuery, hashManager)

	ctx := context.Background()
	currentHeight := uint64(200)
	onlyAvailable := true

	result, err := tools.ListSponsorUTXOs(ctx, currentHeight, onlyAvailable)

	assert.NoError(t, err)
	assert.Empty(t, result)
}

// TestListSponsorUTXOs_QueryError æµ‹è¯•æŸ¥è¯¢å¤±è´¥
func TestListSponsorUTXOs_QueryError(t *testing.T) {
	utxoQuery := NewMockUTXOQueryWithErrorForTools(fmt.Errorf("æŸ¥è¯¢å¤±è´¥"))
	txQuery := &MockTxQuery{}
	chainQuery := &MockChainQuery{}
	hashManager := testutil.NewTestHashManager()

	tools := NewSponsorTools(utxoQuery, txQuery, chainQuery, hashManager)

	ctx := context.Background()
	currentHeight := uint64(200)
	onlyAvailable := true

	result, err := tools.ListSponsorUTXOs(ctx, currentHeight, onlyAvailable)

	assert.Error(t, err)
	assert.Nil(t, result)
	assert.Contains(t, err.Error(), "æŸ¥è¯¢èµåŠ©æ± UTXOå¤±è´¥")
}

// TestListSponsorUTXOs_FilterInvalid æµ‹è¯•è¿‡æ»¤æ— æ•ˆUTXO
func TestListSponsorUTXOs_FilterInvalid(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	txQuery := &MockTxQuery{}
	chainQuery := &MockChainQuery{}
	hashManager := testutil.NewTestHashManager()

	tools := NewSponsorTools(utxoQuery, txQuery, chainQuery, hashManager)

	// æ·»åŠ æœ‰æ•ˆçš„èµåŠ©UTXO
	sponsorUTXO := createSponsorUTXOForTest("1000000", []string{"consume"}, nil, 100)
	utxoQuery.AddSponsorPoolUTXO(sponsorUTXO)

	// æ·»åŠ æ— æ•ˆçš„UTXOï¼ˆä¸æ˜¯èµåŠ©UTXOï¼‰
	invalidUTXO := testutil.CreateUTXO(
		testutil.CreateOutPoint(nil, 0),
		testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000000", testutil.CreateSingleKeyLock(nil)),
		utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE,
	)
	utxoQuery.AddUTXO(invalidUTXO)

	ctx := context.Background()
	currentHeight := uint64(200)
	onlyAvailable := true

	result, err := tools.ListSponsorUTXOs(ctx, currentHeight, onlyAvailable)

	assert.NoError(t, err)
	assert.Len(t, result, 1) // åªè¿”å›æœ‰æ•ˆçš„èµåŠ©UTXO
	assert.Equal(t, sponsorUTXO, result[0].UTXO)
}

// ==================== GetSponsorUTXOInfo æµ‹è¯• ====================

// TestGetSponsorUTXOInfo_Success æµ‹è¯•è·å–èµåŠ©UTXOä¿¡æ¯æˆåŠŸ
func TestGetSponsorUTXOInfo_Success(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	txQuery := &MockTxQuery{}
	chainQuery := &MockChainQuery{}
	hashManager := testutil.NewTestHashManager()

	tools := NewSponsorTools(utxoQuery, txQuery, chainQuery, hashManager)

	// æ·»åŠ èµåŠ©UTXO
	sponsorUTXO := createSponsorUTXOForTest("1000000", []string{"consume"}, nil, 100)
	utxoQuery.AddUTXO(sponsorUTXO)

	ctx := context.Background()
	outpoint := sponsorUTXO.Outpoint
	currentHeight := uint64(200)

	result, err := tools.GetSponsorUTXOInfo(ctx, outpoint, currentHeight)

	assert.NoError(t, err)
	assert.NotNil(t, result)
	assert.NotNil(t, result.Info)
	assert.Equal(t, sponsorUTXO, result.Info.UTXO)
	assert.Equal(t, SponsorStateActive, result.Info.LifecycleState)
	assert.NotNil(t, result.ClaimHistory)
}

// TestGetSponsorUTXOInfo_UTXONotFound æµ‹è¯•UTXOä¸å­˜åœ¨
func TestGetSponsorUTXOInfo_UTXONotFound(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	txQuery := &MockTxQuery{}
	chainQuery := &MockChainQuery{}
	hashManager := testutil.NewTestHashManager()

	tools := NewSponsorTools(utxoQuery, txQuery, chainQuery, hashManager)

	ctx := context.Background()
	outpoint := testutil.CreateOutPoint(nil, 0)
	currentHeight := uint64(200)

	result, err := tools.GetSponsorUTXOInfo(ctx, outpoint, currentHeight)

	assert.Error(t, err)
	assert.Nil(t, result)
	assert.Contains(t, err.Error(), "æŸ¥è¯¢UTXOå¤±è´¥")
}

// TestGetSponsorUTXOInfo_NotSponsorUTXO æµ‹è¯•ä¸æ˜¯èµåŠ©UTXO
func TestGetSponsorUTXOInfo_NotSponsorUTXO(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	txQuery := &MockTxQuery{}
	chainQuery := &MockChainQuery{}
	hashManager := testutil.NewTestHashManager()

	tools := NewSponsorTools(utxoQuery, txQuery, chainQuery, hashManager)

	// æ·»åŠ æ™®é€šUTXO
	normalUTXO := testutil.CreateUTXO(
		testutil.CreateOutPoint(nil, 0),
		testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000000", testutil.CreateSingleKeyLock(nil)),
		utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE,
	)
	utxoQuery.AddUTXO(normalUTXO)

	ctx := context.Background()
	outpoint := normalUTXO.Outpoint
	currentHeight := uint64(200)

	result, err := tools.GetSponsorUTXOInfo(ctx, outpoint, currentHeight)

	assert.Error(t, err)
	assert.Nil(t, result)
	assert.Contains(t, err.Error(), "ä¸æ˜¯èµåŠ©UTXO")
}

// ==================== ValidateSponsorUTXO æµ‹è¯• ====================

// TestSponsorTools_ValidateSponsorUTXO_Success æµ‹è¯•éªŒè¯æˆåŠŸ
func TestSponsorTools_ValidateSponsorUTXO_Success(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	txQuery := &MockTxQuery{}
	chainQuery := &MockChainQuery{}
	hashManager := testutil.NewTestHashManager()

	tools := NewSponsorTools(utxoQuery, txQuery, chainQuery, hashManager)

	sponsorUTXO := createSponsorUTXOForTest("1000000", []string{"consume"}, nil, 100)

	err := tools.ValidateSponsorUTXO(sponsorUTXO)

	assert.NoError(t, err)
}

// ==================== GetStatistics æµ‹è¯• ====================

// TestGetStatistics_Success æµ‹è¯•è·å–ç»Ÿè®¡ä¿¡æ¯æˆåŠŸ
func TestGetStatistics_Success(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	txQuery := &MockTxQuery{}
	chainQuery := &MockChainQuery{currentHeight: 200}
	hashManager := testutil.NewTestHashManager()

	tools := NewSponsorTools(utxoQuery, txQuery, chainQuery, hashManager)

	// æ·»åŠ å¤šä¸ªèµåŠ©UTXO
	sponsorUTXO1 := createSponsorUTXOForTest("1000000", []string{"consume"}, nil, 100)
	sponsorUTXO2 := createSponsorUTXOForTest("2000000", []string{"consume"}, nil, 150)
	utxoQuery.AddSponsorPoolUTXO(sponsorUTXO1)
	utxoQuery.AddSponsorPoolUTXO(sponsorUTXO2)

	ctx := context.Background()

	stats, err := tools.GetStatistics(ctx)

	assert.NoError(t, err)
	assert.NotNil(t, stats)
	assert.Equal(t, 2, stats.TotalSponsors)
	assert.Equal(t, big.NewInt(3000000), stats.TotalAmount)
	assert.Equal(t, 2, stats.ActiveSponsors)
}

// ==================== GetMinerClaimHistory æµ‹è¯• ====================

// TestGetMinerClaimHistory_Success æµ‹è¯•è·å–çŸ¿å·¥é¢†å–å†å²æˆåŠŸ
func TestGetMinerClaimHistory_Success(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	txQuery := &MockTxQuery{}
	chainQuery := &MockChainQuery{}
	hashManager := testutil.NewTestHashManager()

	tools := NewSponsorTools(utxoQuery, txQuery, chainQuery, hashManager)

	ctx := context.Background()
	minerAddr := testutil.RandomAddress()

	// å½“å‰å®ç°è¿”å›ç©ºåˆ—è¡¨ï¼ˆå› ä¸ºGetSponsorClaimHistoryè¿”å›ç©ºåˆ—è¡¨ï¼‰
	history, err := tools.GetMinerClaimHistory(ctx, minerAddr)

	assert.NoError(t, err)
	// æ³¨æ„ï¼šå½“å‰å®ç°å¯èƒ½è¿”å› nilï¼Œéœ€è¦æ£€æŸ¥
	if history == nil {
		history = []*ClaimRecord{} // å¦‚æœè¿”å› nilï¼Œä½¿ç”¨ç©ºåˆ—è¡¨
	}
	assert.Empty(t, history) // å½“å‰å®ç°è¿”å›ç©ºåˆ—è¡¨
}

// TestGetMinerClaimHistory_EmptyAddress æµ‹è¯•ç©ºåœ°å€
func TestGetMinerClaimHistory_EmptyAddress(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	txQuery := &MockTxQuery{}
	chainQuery := &MockChainQuery{}
	hashManager := testutil.NewTestHashManager()

	tools := NewSponsorTools(utxoQuery, txQuery, chainQuery, hashManager)

	ctx := context.Background()

	history, err := tools.GetMinerClaimHistory(ctx, nil)

	assert.Error(t, err)
	assert.Nil(t, history)
	assert.Contains(t, err.Error(), "minerAddrä¸èƒ½ä¸ºç©º")
}

// ==================== SponsorUTXOConfig æµ‹è¯• ====================

// TestValidateConfig_Success æµ‹è¯•é…ç½®éªŒè¯æˆåŠŸ
func TestValidateConfig_Success(t *testing.T) {
	config := &SponsorUTXOConfig{
		TokenType:            "native",
		Amount:               big.NewInt(1000000),
		UseDelegationLock:    true,
		MaxValuePerOperation: 1000000,
	}

	err := config.ValidateConfig()

	assert.NoError(t, err)
}

// TestValidateConfig_NoLockSelected æµ‹è¯•æœªé€‰æ‹©é”å®šæ–¹å¼
func TestValidateConfig_NoLockSelected(t *testing.T) {
	config := &SponsorUTXOConfig{
		TokenType: "native",
		Amount:    big.NewInt(1000000),
		// æœªé€‰æ‹©ä»»ä½•é”å®šæ–¹å¼
	}

	err := config.ValidateConfig()

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "å¿…é¡»ä¸”åªèƒ½é€‰æ‹©ä¸€ç§é”å®šæ–¹å¼")
}

// TestValidateConfig_MultipleLocks æµ‹è¯•é€‰æ‹©äº†å¤šç§é”å®šæ–¹å¼
func TestValidateConfig_MultipleLocks(t *testing.T) {
	config := &SponsorUTXOConfig{
		TokenType:            "native",
		Amount:               big.NewInt(1000000),
		UseDelegationLock:    true,
		UseContractLock:      true, // é€‰æ‹©äº†ä¸¤ç§é”å®šæ–¹å¼
		MaxValuePerOperation: 1000000,
	}

	err := config.ValidateConfig()

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "å¿…é¡»ä¸”åªèƒ½é€‰æ‹©ä¸€ç§é”å®šæ–¹å¼")
}

// TestValidateConfig_InvalidAmount æµ‹è¯•æ— æ•ˆé‡‘é¢
func TestValidateConfig_InvalidAmount(t *testing.T) {
	config := &SponsorUTXOConfig{
		TokenType:         "native",
		Amount:            big.NewInt(0), // é‡‘é¢ä¸º0
		UseDelegationLock: true,
	}

	err := config.ValidateConfig()

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "é‡‘é¢å¿…é¡»å¤§äº0")
}

// TestValidateConfig_EmptyTokenType æµ‹è¯•ç©ºä»£å¸ç±»å‹
func TestValidateConfig_EmptyTokenType(t *testing.T) {
	config := &SponsorUTXOConfig{
		TokenType:         "", // ç©ºä»£å¸ç±»å‹
		Amount:            big.NewInt(1000000),
		UseDelegationLock: true,
	}

	err := config.ValidateConfig()

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ä»£å¸ç±»å‹ä¸èƒ½ä¸ºç©º")
}

// TestValidateConfig_ContractLock_MissingAddress æµ‹è¯•ContractLockç¼ºå°‘åœ°å€
func TestValidateConfig_ContractLock_MissingAddress(t *testing.T) {
	config := &SponsorUTXOConfig{
		TokenType:         "native",
		Amount:            big.NewInt(1000000),
		UseContractLock:   true,
		RequiredMethod:    "claim",
		// ç¼ºå°‘ContractAddress
	}

	err := config.ValidateConfig()

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ContractLockéœ€è¦åˆçº¦åœ°å€")
}

// TestValidateConfig_ContractLock_MissingMethod æµ‹è¯•ContractLockç¼ºå°‘æ–¹æ³•å
func TestValidateConfig_ContractLock_MissingMethod(t *testing.T) {
	config := &SponsorUTXOConfig{
		TokenType:         "native",
		Amount:            big.NewInt(1000000),
		UseContractLock:   true,
		ContractAddress:   testutil.RandomAddress(),
		// ç¼ºå°‘RequiredMethod
	}

	err := config.ValidateConfig()

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ContractLockéœ€è¦æ–¹æ³•å")
}

// TestValidateConfig_HeightLock_InvalidHeight æµ‹è¯•HeightLockæ— æ•ˆé«˜åº¦
func TestValidateConfig_HeightLock_InvalidHeight(t *testing.T) {
	config := &SponsorUTXOConfig{
		TokenType:            "native",
		Amount:               big.NewInt(1000000),
		UseHeightLock:        true,
		UnlockHeight:         0, // æ— æ•ˆé«˜åº¦
		MaxValuePerOperation: 1000000,
	}

	err := config.ValidateConfig()

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "UnlockHeightå¿…é¡»å¤§äº0")
}

// ==================== ToLockingConditions æµ‹è¯• ====================

// TestToLockingConditions_DelegationLock æµ‹è¯•ç”ŸæˆDelegationLockæ¡ä»¶
func TestToLockingConditions_DelegationLock(t *testing.T) {
	config := &SponsorUTXOConfig{
		TokenType:            "native",
		Amount:               big.NewInt(1000000),
		UseDelegationLock:    true,
		MaxValuePerOperation: 1000000,
	}

	conditions, err := config.ToLockingConditions()

	assert.NoError(t, err)
	assert.Len(t, conditions, 1)
	assert.NotNil(t, conditions[0].GetDelegationLock())
	assert.Equal(t, uint64(1000000), conditions[0].GetDelegationLock().MaxValuePerOperation)
}

// TestToLockingConditions_DelegationLock_WithExpiry æµ‹è¯•å¸¦è¿‡æœŸæ—¶é—´çš„DelegationLock
func TestToLockingConditions_DelegationLock_WithExpiry(t *testing.T) {
	expiryBlocks := uint64(50)
	config := &SponsorUTXOConfig{
		TokenType:            "native",
		Amount:               big.NewInt(1000000),
		UseDelegationLock:    true,
		MaxValuePerOperation: 1000000,
		ExpiryDurationBlocks: &expiryBlocks,
	}

	conditions, err := config.ToLockingConditions()

	assert.NoError(t, err)
	assert.Len(t, conditions, 1)
	assert.NotNil(t, conditions[0].GetDelegationLock())
	assert.Equal(t, &expiryBlocks, conditions[0].GetDelegationLock().ExpiryDurationBlocks)
}

// TestToLockingConditions_DelegationLock_WithAllowedDelegates æµ‹è¯•å¸¦å…è®¸å§”æ‰˜åœ°å€çš„DelegationLock
func TestToLockingConditions_DelegationLock_WithAllowedDelegates(t *testing.T) {
	allowedDelegates := [][]byte{testutil.RandomAddress(), testutil.RandomAddress()}
	config := &SponsorUTXOConfig{
		TokenType:            "native",
		Amount:               big.NewInt(1000000),
		UseDelegationLock:    true,
		MaxValuePerOperation: 1000000,
		AllowedDelegates:     allowedDelegates,
	}

	conditions, err := config.ToLockingConditions()

	assert.NoError(t, err)
	assert.Len(t, conditions, 1)
	delegationLock := conditions[0].GetDelegationLock()
	assert.NotNil(t, delegationLock)
	assert.Len(t, delegationLock.AllowedDelegates, 2)
	assert.Equal(t, allowedDelegates[0], delegationLock.AllowedDelegates[0])
	assert.Equal(t, allowedDelegates[1], delegationLock.AllowedDelegates[1])
}

// TestToLockingConditions_ContractLock æµ‹è¯•ç”ŸæˆContractLockæ¡ä»¶
func TestToLockingConditions_ContractLock(t *testing.T) {
	contractAddr := testutil.RandomAddress()
	config := &SponsorUTXOConfig{
		TokenType:         "native",
		Amount:            big.NewInt(1000000),
		UseContractLock:   true,
		ContractAddress:   contractAddr,
		RequiredMethod:    "claim",
	}

	conditions, err := config.ToLockingConditions()

	assert.NoError(t, err)
	assert.Len(t, conditions, 1)
	assert.NotNil(t, conditions[0].GetContractLock())
	assert.Equal(t, contractAddr, conditions[0].GetContractLock().ContractAddress)
	assert.Equal(t, "claim", conditions[0].GetContractLock().RequiredMethod)
}

// TestToLockingConditions_HeightLock æµ‹è¯•ç”ŸæˆHeightLockæ¡ä»¶
func TestToLockingConditions_HeightLock(t *testing.T) {
	config := &SponsorUTXOConfig{
		TokenType:            "native",
		Amount:               big.NewInt(1000000),
		UseHeightLock:        true,
		UnlockHeight:         1000,
		ConfirmationBlocks:  10,
		MaxValuePerOperation: 1000000,
	}

	conditions, err := config.ToLockingConditions()

	assert.NoError(t, err)
	assert.Len(t, conditions, 1)
	assert.NotNil(t, conditions[0].GetHeightLock())
	assert.Equal(t, uint64(1000), conditions[0].GetHeightLock().UnlockHeight)
	assert.Equal(t, uint32(10), conditions[0].GetHeightLock().ConfirmationBlocks)
	assert.NotNil(t, conditions[0].GetHeightLock().BaseLock)
	assert.NotNil(t, conditions[0].GetHeightLock().BaseLock.GetDelegationLock())
}

// TestToLockingConditions_InvalidConfig æµ‹è¯•æ— æ•ˆé…ç½®
func TestToLockingConditions_InvalidConfig(t *testing.T) {
	config := &SponsorUTXOConfig{
		TokenType: "native",
		Amount:    big.NewInt(0), // æ— æ•ˆé‡‘é¢
		UseDelegationLock: true,
	}

	conditions, err := config.ToLockingConditions()

	assert.Error(t, err)
	assert.Nil(t, conditions)
}

// ==================== Mock å¯¹è±¡ ====================

// MockTxQuery æ¨¡æ‹Ÿäº¤æ˜“æŸ¥è¯¢æœåŠ¡
type MockTxQuery struct{}

func (m *MockTxQuery) GetTransaction(ctx context.Context, txHash []byte) ([]byte, uint32, *transaction_pb.Transaction, error) {
	return nil, 0, nil, fmt.Errorf("not implemented")
}

func (m *MockTxQuery) GetTxBlockHeight(ctx context.Context, txHash []byte) (uint64, error) {
	return 0, fmt.Errorf("not implemented")
}

func (m *MockTxQuery) GetBlockTimestamp(ctx context.Context, height uint64) (int64, error) {
	return 0, fmt.Errorf("not implemented")
}

func (m *MockTxQuery) GetAccountNonce(ctx context.Context, address []byte) (uint64, error) {
	return 0, nil
}

func (m *MockTxQuery) GetTransactionsByBlock(ctx context.Context, blockHash []byte) ([]*transaction_pb.Transaction, error) {
	return nil, fmt.Errorf("not implemented")
}

// MockChainQuery æ¨¡æ‹Ÿé“¾æŸ¥è¯¢æœåŠ¡
type MockChainQuery struct {
	currentHeight uint64
}

func (m *MockChainQuery) GetChainInfo(ctx context.Context) (*types.ChainInfo, error) {
	return &types.ChainInfo{}, nil
}

func (m *MockChainQuery) GetCurrentHeight(ctx context.Context) (uint64, error) {
	return m.currentHeight, nil
}

func (m *MockChainQuery) GetBestBlockHash(ctx context.Context) ([]byte, error) {
	return testutil.RandomHash(), nil
}

func (m *MockChainQuery) GetNodeMode(ctx context.Context) (types.NodeMode, error) {
	return types.NodeModeFull, nil
}

func (m *MockChainQuery) IsDataFresh(ctx context.Context) (bool, error) {
	return true, nil
}

func (m *MockChainQuery) IsReady(ctx context.Context) (bool, error) {
	return true, nil
}

func (m *MockChainQuery) GetSyncStatus(ctx context.Context) (*types.SystemSyncStatus, error) {
	return &types.SystemSyncStatus{}, nil
}

// MockUTXOQueryWithErrorForTools å¸¦é”™è¯¯çš„UTXOæŸ¥è¯¢å™¨ï¼ˆç”¨äº sponsor_tools_test.goï¼‰
type MockUTXOQueryWithErrorForTools struct {
	*testutil.MockUTXOQuery
	queryError error
}

func NewMockUTXOQueryWithErrorForTools(queryError error) *MockUTXOQueryWithErrorForTools {
	return &MockUTXOQueryWithErrorForTools{
		MockUTXOQuery: testutil.NewMockUTXOQuery(),
		queryError:    queryError,
	}
}

func (m *MockUTXOQueryWithErrorForTools) GetSponsorPoolUTXOs(ctx context.Context, onlyAvailable bool) ([]*utxopb.UTXO, error) {
	if m.queryError != nil {
		return nil, m.queryError
	}
	return m.MockUTXOQuery.GetSponsorPoolUTXOs(ctx, onlyAvailable)
}

