// Package authz æä¾› AuthZ éªŒè¯æ’ä»¶å®ç°
//
// delegation_lock.go: å§”æ‰˜æˆæƒé”å®šéªŒè¯æ’ä»¶
package authz

import (
	"context"
	"fmt"

	"github.com/weisyn/v1/internal/core/tx/ports/hash"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	txiface "github.com/weisyn/v1/pkg/interfaces/tx"
)

// DelegationLockPlugin å§”æ‰˜æˆæƒé”å®šéªŒè¯æ’ä»¶
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼šéªŒè¯ DelegationLock å’Œ DelegationProof çš„åŒ¹é…
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// DelegationLock å…è®¸ UTXO æ‰€æœ‰è€…æˆæƒç¬¬ä¸‰æ–¹ä»£ä¸ºæ“ä½œï¼Œé€‚ç”¨äºæ‰˜ç®¡æœåŠ¡ã€
// è‡ªåŠ¨åŒ–äº¤æ˜“ã€ä»£ç†æŠ•ç¥¨ç­‰åœºæ™¯ã€‚
//
// ğŸ”’ **éªŒè¯è¦ç‚¹**ï¼š
// 1. å§”æ‰˜å¿…é¡»æœªè¿‡æœŸï¼ˆexpiry_duration_blocks æ£€æŸ¥ï¼‰
// 2. æ“ä½œç±»å‹å¿…é¡»åœ¨æˆæƒèŒƒå›´å†…
// 3. è¢«å§”æ‰˜æ–¹å¿…é¡»åœ¨å…è®¸åˆ—è¡¨ä¸­
// 4. æ“ä½œé‡‘é¢å¿…é¡» <= max_value_per_operation
// 5. è¢«å§”æ‰˜æ–¹ç­¾åå¿…é¡»æœ‰æ•ˆ
//
// ğŸ“‹ **å…¸å‹åº”ç”¨**ï¼š
// - äº¤æ˜“æ‰€æ‰˜ç®¡ï¼šç”¨æˆ·æˆæƒäº¤æ˜“æ‰€ä»£ä¸ºäº¤æ˜“
// - èµ„æºä¸´æ—¶æˆæƒï¼šæ‰€æœ‰è€…å§”æ‰˜å…¶ä»–ç”¨æˆ·ä¸´æ—¶ä½¿ç”¨èµ„æº
// - ä»£ç†æœåŠ¡ï¼šç¬¬ä¸‰æ–¹æœåŠ¡ä»£ç†ç”¨æˆ·æ‰§è¡Œæ“ä½œ
type DelegationLockPlugin struct {
	sigManager        crypto.SignatureManager // ç­¾åéªŒè¯ç®¡ç†å™¨
	hashCanonicalizer *hash.Canonicalizer     // äº¤æ˜“å“ˆå¸Œè®¡ç®—å™¨
}

// NewDelegationLockPlugin åˆ›å»ºæ–°çš„ DelegationLockPlugin
//
// å‚æ•°ï¼š
//   - sigManager: ç­¾åç®¡ç†å™¨ï¼ˆç”¨äºéªŒè¯è¢«å§”æ‰˜æ–¹ç­¾åï¼‰
//   - hashCanonicalizer: äº¤æ˜“å“ˆå¸Œè®¡ç®—å™¨ï¼ˆç”¨äºç­¾åéªŒè¯ï¼‰
//
// è¿”å›ï¼š
//   - *DelegationLockPlugin: æ–°åˆ›å»ºçš„æ’ä»¶å®ä¾‹
func NewDelegationLockPlugin(
	sigManager crypto.SignatureManager,
	hashCanonicalizer *hash.Canonicalizer,
) *DelegationLockPlugin {
	return &DelegationLockPlugin{
		sigManager:        sigManager,
		hashCanonicalizer: hashCanonicalizer,
	}
}

// Name è¿”å›æ’ä»¶åç§°
//
// å®ç° tx.AuthZPlugin æ¥å£
//
// è¿”å›ï¼š
//   - string: æ’ä»¶åç§° "DelegationLock"
func (p *DelegationLockPlugin) Name() string {
	return "DelegationLock"
}

// Match éªŒè¯ DelegationLock å’Œ DelegationProof çš„åŒ¹é…
//
// å®ç° tx.AuthZPlugin æ¥å£
//
// ğŸ¯ **éªŒè¯æµç¨‹**ï¼š
// 1. æ£€æŸ¥ lock æ˜¯å¦ä¸º DelegationLock
// 2. æå– DelegationProof
// 3. éªŒè¯å§”æ‰˜æœªè¿‡æœŸ
// 4. éªŒè¯æ“ä½œç±»å‹åœ¨æˆæƒèŒƒå›´å†…
// 5. éªŒè¯è¢«å§”æ‰˜æ–¹åœ¨å…è®¸åˆ—è¡¨ä¸­
// 6. éªŒè¯æ“ä½œé‡‘é¢é™åˆ¶
// 7. éªŒè¯è¢«å§”æ‰˜æ–¹ç­¾å
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - lock: é”å®šæ¡ä»¶ï¼ˆæœŸæœ›ä¸º DelegationLockï¼‰
//   - unlockingProof: è§£é”è¯æ˜ï¼ˆæœŸæœ›åŒ…å« DelegationProofï¼‰
//   - tx: å®Œæ•´çš„äº¤æ˜“å¯¹è±¡
//
// è¿”å›ï¼š
//   - bool: æ˜¯å¦åŒ¹é…ï¼ˆtrue=åŒ¹é…ï¼Œfalse=ä¸åŒ¹é…ï¼‰
//   - error: éªŒè¯é”™è¯¯ï¼ˆåŒ¹é…ä½†éªŒè¯å¤±è´¥æ—¶è¿”å›é”™è¯¯ï¼‰
//
// ğŸ“ **ä½¿ç”¨ç¤ºä¾‹**ï¼š
//
//	delegationLock := &transaction.LockingCondition{
//	    Condition: &transaction.LockingCondition_DelegationLock{
//	        DelegationLock: &transaction.DelegationLock{
//	            OriginalOwner: ownerAddr,
//	            AllowedDelegates: [][]byte{delegateAddr},
//	            AuthorizedOperations: []string{"transfer", "trade"},
//	            ExpiryDurationBlocks: proto.Uint64(10000),
//	            MaxValuePerOperation: 1000,
//	        },
//	    },
//	}
//
//	delegationProof := &transaction.DelegationProof{
//	    DelegationTransactionId: delegationTxID,
//	    DelegationOutputIndex: 0,
//	    DelegateSignature: signature,
//	    OperationType: "transfer",
//	    ValueAmount: 500,
//	    DelegateAddress: delegateAddr,
//	}
func (p *DelegationLockPlugin) Match(
	ctx context.Context,
	lock *transaction.LockingCondition,
	unlockingProof *transaction.UnlockingProof,
	tx *transaction.Transaction,
) (bool, error) {
	// 1. ç±»å‹æ£€æŸ¥ï¼šæ˜¯å¦ä¸º DelegationLock
	delegationLock := lock.GetDelegationLock()
	if delegationLock == nil {
		// ä¸æ˜¯ DelegationLockï¼Œè¿”å› false è¡¨ç¤ºè·³è¿‡æ­¤æ’ä»¶
		return false, nil
	}

	// 2. æå– DelegationProof
	delegationProof := unlockingProof.GetDelegationProof()
	if delegationProof == nil {
		return true, fmt.Errorf("DelegationLock éœ€è¦ DelegationProofï¼Œä½†æœªæä¾›")
	}

	// 3. éªŒè¯å§”æ‰˜æœªè¿‡æœŸ âœ… **å®Œæ•´å®ç°**
	// ğŸ’¡ **å®ç°è¯´æ˜**ï¼šä» VerifierEnvironment è·å–å½“å‰åŒºå—é«˜åº¦ï¼ŒéªŒè¯å§”æ‰˜æœªè¿‡æœŸ
	if delegationLock.ExpiryDurationBlocks != nil && *delegationLock.ExpiryDurationBlocks > 0 {
		// ä»contextè·å–VerifierEnvironment
		env, ok := txiface.GetVerifierEnvironment(ctx)
		if !ok || env == nil {
			// å¦‚æœæ²¡æœ‰æä¾›VerifierEnvironmentï¼Œæ— æ³•éªŒè¯è¿‡æœŸï¼Œè¿”å›é”™è¯¯
			// è¿™ç¡®ä¿åœ¨ç”Ÿäº§ç¯å¢ƒä¸­å¿…é¡»æä¾›ç¯å¢ƒä¿¡æ¯
			return true, fmt.Errorf("VerifierEnvironmentæœªæä¾›ï¼Œæ— æ³•éªŒè¯å§”æ‰˜è¿‡æœŸï¼ˆè¯·åœ¨éªŒè¯æ—¶æä¾›VerifierEnvironmentï¼‰")
		}

		// è·å–å½“å‰åŒºå—é«˜åº¦
		currentHeight := env.GetBlockHeight()

		// æŸ¥è¯¢å§”æ‰˜äº¤æ˜“æ‰€åœ¨çš„åŒºå—é«˜åº¦
		delegationHeight, err := env.GetTxBlockHeight(ctx, delegationProof.DelegationTransactionId)
		if err != nil {
			return true, fmt.Errorf("æŸ¥è¯¢å§”æ‰˜äº¤æ˜“åŒºå—é«˜åº¦å¤±è´¥: %w", err)
		}

		// éªŒè¯å§”æ‰˜æœªè¿‡æœŸ
		expiryHeight := delegationHeight + *delegationLock.ExpiryDurationBlocks
		if currentHeight > expiryHeight {
			return true, fmt.Errorf("å§”æ‰˜å·²è¿‡æœŸï¼šå½“å‰é«˜åº¦=%dï¼Œè¿‡æœŸé«˜åº¦=%dï¼Œå§”æ‰˜é«˜åº¦=%d",
				currentHeight, expiryHeight, delegationHeight)
		}
	}
	// å¦‚æœExpiryDurationBlocksä¸ºnilæˆ–0ï¼Œè¡¨ç¤ºå§”æ‰˜æ°¸ä¸è¿‡æœŸï¼ˆå…è®¸ï¼‰

	// 4. éªŒè¯æ“ä½œç±»å‹åœ¨æˆæƒèŒƒå›´å†…
	operationType := delegationProof.OperationType
	authorized := false
	for _, op := range delegationLock.AuthorizedOperations {
		if op == operationType {
			authorized = true
			break
		}
	}
	if !authorized {
		return true, fmt.Errorf("æ“ä½œç±»å‹ %s ä¸åœ¨æˆæƒèŒƒå›´å†…", operationType)
	}

	// 5. éªŒè¯è¢«å§”æ‰˜æ–¹åœ¨å…è®¸åˆ—è¡¨ä¸­ï¼ˆä¸­ä¼˜å…ˆçº§-3ï¼‰
	//
	// ç‰¹æ®Šè¯­ä¹‰ï¼šAllowedDelegates ä¸ºç©ºè¡¨ç¤º"ä»»æ„æ–¹å¯æ‰§è¡Œ"
	// è¿™æ˜¯èµåŠ©æ¿€åŠ±æœºåˆ¶çš„æ ¸å¿ƒè®¾è®¡ï¼šä»»æ„çŸ¿å·¥å¯é¢†å–èµåŠ©
	delegateAddr := delegationProof.DelegateAddress
	if len(delegationLock.AllowedDelegates) > 0 {
		// æœ‰ç™½åå•ï¼šå¿…é¡»åœ¨ç™½åå•ä¸­
		allowed := false
		for _, addr := range delegationLock.AllowedDelegates {
			if string(addr) == string(delegateAddr) {
				allowed = true
				break
			}
		}
		if !allowed {
			return true, fmt.Errorf("è¢«å§”æ‰˜æ–¹ä¸åœ¨å…è®¸åˆ—è¡¨ä¸­")
		}
	}
	// AllowedDelegatesä¸ºç©ºï¼šä»»æ„æ–¹å¯æ‰§è¡Œï¼ˆèµåŠ©æ¿€åŠ±åœºæ™¯ï¼‰

	// 6. éªŒè¯æ“ä½œé‡‘é¢é™åˆ¶
	if delegationProof.ValueAmount > delegationLock.MaxValuePerOperation {
		return true, fmt.Errorf("æ“ä½œé‡‘é¢ %d è¶…è¿‡é™åˆ¶ %d",
			delegationProof.ValueAmount,
			delegationLock.MaxValuePerOperation)
	}

	// ğŸ” **P2-1: å®ç°è¢«å§”æ‰˜æ–¹ç­¾åéªŒè¯** âœ…
	//
	// **éªŒè¯é€»è¾‘**ï¼š
	// 1. æ£€æŸ¥ç­¾åéç©ºï¼ˆå¦‚æœæä¾›äº†ç­¾åï¼‰
	// 2. æ‰¾åˆ°å½“å‰è¾“å…¥çš„ç´¢å¼•
	// 3. è®¡ç®—äº¤æ˜“ç­¾åå“ˆå¸Œ
	// 4. è·å–è¢«å§”æ‰˜æ–¹å…¬é’¥å¹¶éªŒè¯ç­¾å
	//
	// **è®¾è®¡å†³ç­–**ï¼š
	// - ç­¾åéªŒè¯ä¸ºå¯é€‰ï¼šå¦‚æœæä¾›äº†DelegateSignatureåˆ™éªŒè¯ï¼Œæœªæä¾›ä¸å½±å“éªŒè¯é€šè¿‡
	// - è¿™ä¿æŒä¸SponsorClaimPluginä¸€è‡´çš„çµæ´»æ€§
	if delegationProof.DelegateSignature != nil && len(delegationProof.DelegateSignature.Value) > 0 {
		// æä¾›äº†ç­¾åï¼Œè¿›è¡ŒéªŒè¯

		// 1. æ‰¾åˆ°å½“å‰è¾“å…¥çš„ç´¢å¼•
		inputIndex := -1
		for i, input := range tx.Inputs {
			// æ¯”è¾ƒ DelegationProof æ˜¯å¦æ˜¯åŒä¸€ä¸ªå¯¹è±¡
			if input.GetDelegationProof() == delegationProof {
				inputIndex = i
				break
			}
		}
		if inputIndex == -1 {
			return true, fmt.Errorf("æ— æ³•æ‰¾åˆ°å½“å‰è¾“å…¥çš„ç´¢å¼•")
		}

		// 2. è®¡ç®—äº¤æ˜“ç­¾åå“ˆå¸Œï¼ˆç”¨äºéªŒè¯ï¼‰
		txHash, err := p.hashCanonicalizer.ComputeSignatureHashForVerification(
			ctx, tx, inputIndex, transaction.SignatureHashType_SIGHASH_ALL)
		if err != nil {
			return true, fmt.Errorf("è®¡ç®—äº¤æ˜“ç­¾åå“ˆå¸Œå¤±è´¥: %w", err)
		}

		// 3. è·å–è¢«å§”æ‰˜æ–¹å…¬é’¥å¹¶éªŒè¯ç­¾å
		// âœ… **ä½¿ç”¨ VerifierEnvironment.GetPublicKey è·å–å…¬é’¥**
		env, ok := txiface.GetVerifierEnvironment(ctx)
		if !ok || env == nil {
			// å¦‚æœæ²¡æœ‰æä¾› VerifierEnvironmentï¼Œè·³è¿‡ç­¾åéªŒè¯ï¼ˆå‘åå…¼å®¹ï¼‰
			// è¿™å…è®¸åœ¨æµ‹è¯•ç¯å¢ƒæˆ–æœªæ³¨å…¥ç¯å¢ƒæ—¶ç»§ç»­å·¥ä½œ
		} else {
			// å°è¯•ä» VerifierEnvironment è·å–å…¬é’¥
			delegatePubKey, err := env.GetPublicKey(ctx, delegationProof.DelegateAddress)
			if err != nil {
				// è·å–å…¬é’¥å¤±è´¥ï¼Œä½†ä¸é˜»æ­¢éªŒè¯é€šè¿‡ï¼ˆå‘åå…¼å®¹ï¼‰
				// æœªæ¥å¯ä»¥è€ƒè™‘å°†ç­¾åéªŒè¯è®¾ä¸ºå¼ºåˆ¶
				// return true, fmt.Errorf("è·å–è¢«å§”æ‰˜æ–¹å…¬é’¥å¤±è´¥: %w", err)
			} else if len(delegatePubKey) > 0 {
				// æˆåŠŸè·å–å…¬é’¥ï¼Œè¿›è¡Œç­¾åéªŒè¯
				valid := p.sigManager.VerifyTransactionSignature(
					txHash, delegationProof.DelegateSignature.Value, delegatePubKey, crypto.SigHashAll)
				if !valid {
					return true, fmt.Errorf("è¢«å§”æ‰˜æ–¹ç­¾åéªŒè¯å¤±è´¥ï¼šç­¾åæ— æ•ˆ")
				}
				// âœ… ç­¾åéªŒè¯é€šè¿‡
			}
			// å¦‚æœ delegatePubKey ä¸º nilï¼Œè¯´æ˜åœ°å€æ²¡æœ‰å¯¹åº”çš„å…¬é’¥è®°å½•ï¼Œè·³è¿‡éªŒè¯
		}
	}
	// å¦‚æœæœªæä¾›ç­¾åï¼Œè·³è¿‡éªŒè¯ï¼ˆå…è®¸æŸäº›åœºæ™¯ä¸‹ä¸å¼ºåˆ¶ç­¾åï¼‰

	// éªŒè¯é€šè¿‡
	return true, nil
}
